fix: overlapping

--- a/packages/beacon-ui/src/components/qr/styles.css
+++ b/packages/beacon-ui/src/components/qr/styles.css
@@ -55,7 +55,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
   border-radius: 6px;
   transition: all ease 0.2s;
   cursor: pointer;
